; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-unit-name.c_test_unit_name_is_valid_one.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-unit-name.c_test_unit_name_is_valid_one.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"%s ( %s%s%s ): %s\00", align 1
@UNIT_NAME_PLAIN = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"plain\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@UNIT_NAME_INSTANCE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [10 x i8] c" instance\00", align 1
@UNIT_NAME_TEMPLATE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [10 x i8] c" template\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i32)* @test_unit_name_is_valid_one to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_unit_name_is_valid_one(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* @UNIT_NAME_PLAIN, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @UNIT_NAME_INSTANCE, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @UNIT_NAME_TEMPLATE, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0)
  %26 = load i32, i32* %6, align 4
  %27 = call i32 @yes_no(i32 %26)
  %28 = call i32 @log_info(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %7, i8* %13, i8* %19, i8* %25, i32 %27)
  %29 = load i8*, i8** %4, align 8
  %30 = load i32, i32* %5, align 4
  %31 = call i32 @unit_name_is_valid(i8* %29, i32 %30)
  %32 = load i32, i32* %6, align 4
  %33 = icmp eq i32 %31, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @assert_se(i32 %34)
  ret void
}

declare dso_local i32 @log_info(i8*, i8*, i8*, i8*, i8*, i32) #1

declare dso_local i32 @yes_no(i32) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @unit_name_is_valid(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
